remove workspace.xml from GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ cython_debug/
 /.idea/vcs.xml
 /.idea/modules.xml
 /.idea/misc.xml
+/C:/projects/python/calculator using PySimpleGUI/.idea/workspace.xml
